# belief-stack

./: .gitignore  DATA.md  LICENSE-prose.md  README.md  ROADMAP.md  pyproject.toml
beliefstack/: __init__.py  calibration.py  decisions.py  embeddings.py  events.py  hypotheses.py  lifecycle.py  regions.py  reports.py  warrants.py
docs/: belief_stack_fit_assessment.md  belief_stack_fit_assessment_kg.md
field/: animate_field.py  build_expectation_field.py  build_field_instrumentation.py  build_question_field_states.py  build_spatial_field.py  visualize_field.py
methodology/: operating_principles.md
paper/: MAINTAINED_STATE_AS_PLANNING_PRIMITIVE.md
tests/: test_calibration.py  test_lifecycle.py  test_warrants.py
tkos_sidecar/: AUDIT_RESPONSE_2026-06-06.md  AUDIT_RESPONSE_v0.3.1.md  AUDIT_RESPONSE_v0.3.2.md  AUDIT_RESPONSE_v0.3.3.md  INTEGRATION_PATTERN_v0.1.2.md  INTEGRATION_PATTERN_v0.1.3.md  INTEGRATION_PATTERN_v0.1.4.md  INTEGRATION_PATTERN_v0.1.md  RULES_SPEC_v0.2.md  RULES_SPEC_v0.3.1.md  RULES_SPEC_v0.3.2.md  TKOS-002_HUMAN_OBSERVABILITY_SURFACE_v0.1.md  TKOS-002_IMPLEMENTATION_NOTE_v0.1.md  TKOS-002_IMPLEMENTATION_SLICE_v0.1.md  TKOS_READ_PATH_MIGRATION_v0.2.md  TKOS_READ_PATH_MIGRATION_v0.3.1.md  TKOS_READ_PATH_MIGRATION_v0.3.2.md  TKOS_READ_PATH_MIGRATION_v0.3.3.md  TKOS_SIDECAR_SKETCH_v0.1.md  TKOS_WRITE_PATH_SCOPE_v0.1.md  TKOS_WRITE_PATH_SCOPE_v0.2.md  TKOS_WRITE_PATH_SCOPE_v0.3.1.md  TKOS_WRITE_PATH_SCOPE_v0.3.2.md  TKOS_WRITE_PATH_SCOPE_v0.3.3.md  V04C2_CAPTURE_WORKFLOW_v0.1.md  ingest.py  rules.py  test_ingest.py  test_tkos.py  tkos.py  (+2 more)
(+149 files in other folders)
